<resources>
    <string name="app_name">Shamba letu</string>
    <string name="register">REGISTER</string>
    <string name="full_name">Full Name</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email_address">Email Address</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="already_have_an_account_login">Already have an Account ? Login</string>
    <string name="login">LOGIN</string>
    <string name="dont_have_an_account_sign_up">Dont have an account? Sign up</string>
    <string name="latitude">Latitude: 0.000000-</string>
    <string name="longitude">Longitude: 0.000000</string>
    <string name="distance_0_m">Distance: 0 m</string>
    <string name="area_0_m">Area: 0 m²</string>
    <string name="gps_searching">GPS: Searching...</string>
    <string name="add_point">Add Point</string>
    <string name="undo">Undo</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
</resources>